# docparser

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/superpowers/plans/: 2026-06-25-pdf-parser-milestone-1.md  2026-06-26-pdf-parser-milestone-2.md  2026-06-26-pdf-parser-milestone-3-4.md
docs/superpowers/specs/: 2026-06-25-pdf-parser-service-design-zh.md  2026-06-25-pdf-parser-service-design.md
scripts/: mineru_adapter.py
src/docparser/: app.py  config.py  models.py  parser.py  pdf_preflight.py  schema.py  storage.py  tasks.py
src/docparser/web/: index.html
tests/: test_app.py  test_parser.py  test_pdf_preflight.py  test_schema.py  test_storage.py  test_tasks.py
