[project]
name = "docparser"
version = "0.1.0"
description = "PDF-only document parsing service skeleton"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "python-multipart>=0.0.9",
  "pydantic>=2",
  "PyMuPDF>=1.24",
]

[dependency-groups]
dev = [
  "pytest>=8",
  "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
docparser = ["web/*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
